[package]
name = "hemolymph-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.7.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = "1.38.0"
hemoglobin = { git = "https://github.com/Lilith-In-Starlight/hemoglobin"}
serde_json = "1.0.117"
actix-files = "0.6.6"
